--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -135,11 +135,9 @@ We will help you exceed your expectations.<a href="#" class="view_more_link">Wha
                         <img class="card-img-top" src="{% static 'images/web_development_icon1.png' %}" alt="Web Develpoment Image">
                         <div class="card-body">
                             <h5 class="card-title">Web Develpoment</h5>
-                            <p class="card-text">Good websites get applause. Great websites get business.
-
-Don’t let your website be just another URL on the web. We can help it be a powerful marketing medium to attract prospective customers. 
-
-As a web developer with expertise in developing creative, conversion focused websites, we are well-poised to help your business make a mark online.</p>
+                            <p class="card-text">We provide Fast turnaround time with Best quality at reasonable price.
+ We create static websites, WordPress, Joomla, Drupal, CMS, Custom Programming etc.
+ Professional creative web design at affordable price.</p>
                             <a href="#" class="view_more_link view_service_details">Work</a>
                         </div>
                     </div>
@@ -149,7 +147,10 @@ As a web developer with expertise in developing creative, conversion focused web
                         <img class="card-img-top" src="{% static 'images/app_development_icon1.png' %}" alt="App Develpoment Image">
                         <div class="card-body">
                             <h5 class="card-title">App Develpoment</h5>
-                            <p class="card-text">We help you craft a functional and high-performing apps through our effective mobile app development services.</p>
+                            <p class="card-text">Android or iOS (Iphone, Ipad, Ipod ) Custom application development with high quality and low cost.
+ We have made apps that are featured in many popular review websites.
+ LET'S TALK
+Contact us to discuss your ideas and concept, and we would love to give you a no obligation free quote for bringing your need to reality.</p>
                             <a href="#" class="view_more_link view_service_details">Work</a>
                         </div>
                     </div>
@@ -159,8 +160,10 @@ As a web developer with expertise in developing creative, conversion focused web
                         <img class="card-img-top" src="{% static 'images/graphics_design_icon1.png' %}" alt="Graphics Design Image">
                         <div class="card-body">
                             <h5 class="card-title">Graphics Design</h5>
-                            <p class="card-text">In addition to comprehensive web design, our graphic designers create logos and branding features, 
-specialized buttons and unique digital features that engage viewers and help you win business.</p>
+                            <p class="card-text">Graphic design is more than just pictures and drawings. It is the art of communication, and problem solving through imagery.
+Our proven creative graphic design services speak of your brand, thus establishing an instant connection with your customers.
+Realize your vision for your next design with a digital platform that’s built to perform.
+</p>
                             <a href="#" class="view_more_link view_service_details">Work</a>
                         </div>
                     </div>
@@ -170,7 +173,10 @@ specialized buttons and unique digital features that engage viewers and help you
                         <img class="card-img-top blockchain_image" height="177" src="{% static 'images/blockchain_icon1.png' %}" alt="Blockchain Image">
                         <div class="card-body">
                             <h5 class="card-title">Blockchain</h5>
-                            <p class="card-text">Rather than web design, app development, graphic designing we also work in the field of blockchain to provide our clients more security and new technologies..</p>
+                            <p class="card-text">The fever of blockchain seems to take on most of the current industries as we know of,
+Bitcoin showed us a glimpse of a world without banks and financial institutions.
+We work with blockchain to provide our customers with more security and new technology.
+</p>
                             <a href="#" class="view_more_link view_service_details">Work</a>
                         </div>
                     </div>
